// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $23,141,231,241.23
    .
  </h1>
</div>
`;

exports[`should render correctly with only one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $94.34
    .
  </h1>
</div>
`;
